# AI-nutrition

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Caddyfile  Dockerfile  PRD.md  QUICKSTART.md  README.fr.md  README.md  conftest.py  deploy.py  docker-compose.caddy.yml  docker-compose.yml  pytest.ini  render.yaml  requirements-dev.txt  requirements-prod.txt  requirements.txt  ruff.toml
.claude/: .mcp.json  settings.json  settings.local.json
4_Pydantic_AI_Agent/: .gitignore  AUTONOMOUS_WORK_SUMMARY.md  FATSECRET_IMPLEMENTATION_STATUS.md  PROJECT_STATUS.md  SESSION_COMPLETE_REPORT.md  TESTING_COMPLETE_STATUS.md  TEST_STATUS.md  agent.py  clients.py  conftest.py  prompt.py  pytest.ini  streamlit_ui.py  test_full_meal_plan.py  test_meal_plan_agent.py  test_profile_quick.py  test_shopping_list_agent.py  tools.py  verify_setup.py
docs/: api-architecture-explained.md  bug-investigation-workflow.md  concepts-cles-a-maitriser.md  twa-digital-asset-links.md
evals/: test_add_favorite_routing_e2e.py  test_agent_e2e.py  test_baseline_coaching_e2e.py  test_calorie_floor_e2e.py  test_food_logging_e2e.py  (+22 more)
generative_UI_project_example/second-brain-research-dashboard/agent/: .env.example  .gitignore  README.md  __init__.py  a2ui_generator.py  agent.py  content_analyzer.py  layout_selector.py  llm_orchestrator.py  main.py  prompts.py  pyproject.toml  requirements.txt  setup.sh
generative_UI_project_example/second-brain-research-dashboard/agent/tests/: test_a2ui_generator.py  test_layout_generators.py  test_orchestrator.py  test_prompts.py  test_tag_generators.py
(+510 files in other folders)
